--- a/Campagn/style.css
+++ b/Campagn/style.css
@@ -305,11 +305,12 @@ button#btn-restart:hover {
 }
 
 .q-image {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   border-radius: 16px;
   margin-bottom: 20px;
   display: block;
+  object-fit: cover;
 }
 
 
