--- a/Campagn/style.css
+++ b/Campagn/style.css
@@ -501,6 +501,22 @@ button#btn-restart:hover {
   margin: 0 auto;
 }
 
+/* Result ECG Graphic */
+.ecg-wrap {
+  width: 100%;
+  height: 100px;
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#result-ecg-canvas {
+  width: 100%;
+  max-width: 300px;
+  height: 100px;
+}
+
 
 @keyframes fingerPulse {
   from {
