--- a/Campagn/style.css
+++ b/Campagn/style.css
@@ -354,6 +354,11 @@ button#btn-restart:hover {
   color: var(--secondary);
 }
 
+.small_txt {
+  font-size: 24px;
+  color: var(--text-sub);
+}
+
 /* Camera & Measurement */
 .center {
   text-align: center;
@@ -661,6 +666,10 @@ button#btn-restart:hover {
   font-size: 14px;
   color: var(--text-sub);
   margin-top: 12px;
+  max-width: 260px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.3;
 }
 
 /* --- NEW RESULT PAGE STYLES --- */
@@ -1080,4 +1089,8 @@ button#btn-restart:hover {
   50% {
     transform: translateY(-10px);
   }
+}
+
+.bold {
+  font-weight: 700;
 }
