--- a/Campagn/style.css
+++ b/Campagn/style.css
@@ -1064,7 +1064,7 @@ button#btn-restart:hover {
   transform: translateY(20px);
   transition: opacity 1.2s ease-out, transform 1.2s ease-out;
   width: 100%;
-  max-width: 280px;
+  /* max-width: 280px;*/
   margin: 32px auto 0;
   display: block;
   /* border-radius: 16px; */
